update gradle version

--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,14 @@
 buildscript {
     
     repositories {
-        google()
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/google/' }
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/gradle-plugin/' }
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.4.0'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -17,9 +20,12 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        jcenter()
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/google/' }
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/gradle-plugin/' }
         maven { url 'https://jitpack.io' }
+        jcenter()
+        google()
     }
 }
 
