--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 *.iml
-.gradle
-/local.properties
-/.idea
-.DS_Store
-/build
-/captures
-.externalNativeBuild
+.gradle/
+local.properties
+.idea/
+gradlew
+
