--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,23 @@
-*.iml
-.gradle/
-local.properties
-.idea/
-gradlew
+#Android generated
+bin
+gen
 
+#Eclipse
+.project
+.classpath
+.settings
+
+#IntelliJ IDEA
+.idea
+*.iml
+classes
+
+#Maven
+target
+release.properties
+pom.xml.*
+
+#Command line
+local.properties
+build.xml
+proguard-project.txt
