--- a/bottomnavigationview/build.gradle
+++ b/bottomnavigationview/build.gradle
@@ -1,9 +1,10 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.github.wintonBy'
 
 android {
     compileSdkVersion 28
-
-
 
     defaultConfig {
         minSdkVersion 15
