--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,6 @@ android:
 
   notifications:
     email: false
+
+before_install:
+  - yes | $ANDROID_HOME/tools/bin/sdkmanager "build-tools;28.0.3"
